k8s-manifests/argocd-infra/governance/cluster-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: banking-guardrails
spec:
  validationFailureAction: Enforce # 12 LPA LOGIC: Block the deployment, don't just warn.
  background: true
  rules:
    # RULE 1: Protect Karpenter from "Infinite Scaling"
    - name: check-resource-limits
      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaces:
            - banking-prod
      validate:
        message: "Resource limits are REQUIRED so Karpenter can scale efficiently."
        pattern:
          spec:
            containers:
            - resources:
                limits:
                  cpu: "?*"
                  memory: "?*"

    # RULE 2: Security - No Root Access
    - name: disallow-root-user
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Running as root is forbidden in the Banking Cluster."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
